# tofino-traffic-generator

./: .gitignore  README.md  post_install.py  pyproject.toml
dev_enviroment/: Vagrantfile
dev_enviroment/provision/: deps.sh  python.sh  sde.sh
tofino_traffic_generator/: all.json  log.txt  main.py  packets.py  ssh_conn.py  switch_controller.py  tof_gen_config.json.sample  traffic_config.py  traffic_gen.py
tofino_traffic_generator/scripts/: veth-setup.sh
tofino_traffic_generator/src/: headers.p4  port_config.txt  table_entries.py  traffic_gen.p4  util.p4
tofino_traffic_generator/templates/: build.sh.j2  headers_template.p4.j2  log.txt  port_config_template.txt.j2  table_entries_template.py.j2  traffic_gen_template.p4.j2  veth-setup.sh.j2
